--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     ==========================================================================-->
 <div class="row-fluid"><!-- .row-fluid [start] -->
 	<div class="span12 slogan text-center"><!-- .span12 [start] -->
-		<img class="logo" src="./static/img/logo.png" alt="logo">
+		<img class="logo" src="./static/img/logo.png" alt="logo" width="400">
 		<h3>Enjoy Your Life.</h3>
 	</div><!-- .span12 [end] -->
 </div><!-- .row-fluid [end] -->
