updated for jeelab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>FTSix Studios</title>
+        <title>Jeelab Studios</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -60,7 +60,7 @@
 
 	<div class="span4 info-container right">
 		<div class="hero-unit info">
-  		<h3>FTSix Studios</h3>
+  		<h3>Jeelab Studios</h3>
   		<p><small>Create incredible product experiences.</small></p>
 		</div>
 	</div>
