--- a/support.html
+++ b/support.html
@@ -34,10 +34,10 @@ body {
     <br/>
 </p>
 <p>
-    <span style="font-size: 16px; font-family: SimSun, STSong;font-weight: bold;">在使用过程中有任何问题，请及时通过邮件 <a href="mailto:hi@426s.com">hi@426s.com</a> 与我们联系。</span><span style="font-size: 12px; font-family: 宋体;"></span>
+    <span style="font-size: 16px; font-family: SimSun, STSong;font-weight: bold;">在使用过程中有任何问题，请及时通过邮件 <a href="mailto:superwong321@163.com">superwong321@163.com</a> 与我们联系。</span><span style="font-size: 12px; font-family: 宋体;"></span>
 </p>
 <p>
-    <span style="font-size: 16px; font-family: SimSun, STSong;font-weight: bold;">If you have any question about the game, please email us <a href="mailto:hi@426s.com">hi@426s.com</a> </span><span style="font-size: 12px; font-family: 宋体;"> .</span>
+    <span style="font-size: 16px; font-family: SimSun, STSong;font-weight: bold;">If you have any question about the game, please email us <a href="mailto:superwong321@163.com">superwong321@163.com</a> </span><span style="font-size: 12px; font-family: 宋体;"> .</span>
 </p>
 
 <p>
