--- a/policy-cn.html
+++ b/policy-cn.html
@@ -31,7 +31,7 @@ body {
     <span style="font-size: 28px; font-family: 宋体; font-weight: bold;">隐私政策</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">你的隐私对FTSix Studios而言至关重要。因此，我们制定了一项隐私政策，其中说明了我们如何收集、使用、披露、转让和存储你的信息。请你仔细阅读我们的隐私政策，如有任何问题，请告知我们</span><span style="font-size: 12px; font-family: 宋体;">。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">你的隐私对Jeelab Studios而言至关重要。因此，我们制定了一项隐私政策，其中说明了我们如何收集、使用、披露、转让和存储你的信息。请你仔细阅读我们的隐私政策，如有任何问题，请告知我们</span><span style="font-size: 12px; font-family: 宋体;">。</span>
 </p>
 <p>
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">个人信息的收集和使用</span>
@@ -40,10 +40,10 @@ body {
     <span style="font-size: 12px; font-family: SimSun, STSong;">个人信息是可用于唯一地识别或联系某人的数据。</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">你在使用 FTSix Studios 出品的产品时，可能会要求提供你的个人信息。FTSix Studios 及其关联公司可互相分享此个人信息，并按本隐私政策使用该信息。FTSix Studios 及其关联公司还可将此信息与其他信息合并在一起，用于提供和改进我们的产品、服务、内容和广告宣传。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">你在使用 Jeelab Studios 出品的产品时，可能会要求提供你的个人信息。Jeelab Studios 及其关联公司可互相分享此个人信息，并按本隐私政策使用该信息。Jeelab Studios 及其关联公司还可将此信息与其他信息合并在一起，用于提供和改进我们的产品、服务、内容和广告宣传。</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">下文是FTSix Studios 可能收集的个人信息的类型以及我们如何使用该信息的一些示例。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">下文是Jeelab Studios 可能收集的个人信息的类型以及我们如何使用该信息的一些示例。</span>
 </p>
 <p>
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">我们收集何种个人信息</span>
@@ -71,12 +71,12 @@ body {
     </li>
     <li>
         <p>
-            <span style="font-size: 12px; font-family: 宋体;">我们会不时地使用你的个人信息以发送重要通知，如关于购买以及我们的条款、条件和政策变更的通讯。由于此信息对你与&nbsp;</span><span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;">&nbsp;之间的互动至关重要，你不能放弃接收此类沟通信息。</span>
+            <span style="font-size: 12px; font-family: 宋体;">我们会不时地使用你的个人信息以发送重要通知，如关于购买以及我们的条款、条件和政策变更的通讯。由于此信息对你与&nbsp;</span><span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;">&nbsp;之间的互动至关重要，你不能放弃接收此类沟通信息。</span>
         </p>
     </li>
     <li>
         <p>
-            <span style="font-size: 12px; font-family: 宋体;">我们还会将个人信息用于审计、数据分析和研究等内部目的，以改进&nbsp;</span><span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;">&nbsp;的产品、服务和与客户之间的沟通。</span>
+            <span style="font-size: 12px; font-family: 宋体;">我们还会将个人信息用于审计、数据分析和研究等内部目的，以改进&nbsp;</span><span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;">&nbsp;的产品、服务和与客户之间的沟通。</span>
         </p>
     </li>
     <li>
@@ -110,19 +110,19 @@ body {
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">Cookies 和其他技术</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios的网站、在线服务、互动应用软件、电子邮件消息和广告宣传可能会使用 </span><a href="http://www.apple.com/cn/privacy/use-of-cookies/" style="cursor: pointer; color: rgb(0, 0, 255);"><span style="font-size: 12px; font-family: SimSun, STSong;">“cookies” 和其他技术</span></a><span style="font-size: 12px; font-family: SimSun, STSong;">，如像素标签和网站信标。此等技术帮助我们更好地了解用户的行为，告诉我们人们浏览了我们网站的哪些部分，提高和衡量广告以及网络搜索的效果。我们将通过 cookies 和其他技术收集的信息视为非个人信息。但是，如果当地法律将 IP 地址或类似识别标记视为个人信息，则我们亦将此等识别标记视为个人信息。同样，就本隐私政策而言，在非个人信息与个人信息合并在一起的情况下，我们将合并后的信息视为个人信息。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios的网站、在线服务、互动应用软件、电子邮件消息和广告宣传可能会使用 </span><a href="http://www.apple.com/cn/privacy/use-of-cookies/" style="cursor: pointer; color: rgb(0, 0, 255);"><span style="font-size: 12px; font-family: SimSun, STSong;">“cookies” 和其他技术</span></a><span style="font-size: 12px; font-family: SimSun, STSong;">，如像素标签和网站信标。此等技术帮助我们更好地了解用户的行为，告诉我们人们浏览了我们网站的哪些部分，提高和衡量广告以及网络搜索的效果。我们将通过 cookies 和其他技术收集的信息视为非个人信息。但是，如果当地法律将 IP 地址或类似识别标记视为个人信息，则我们亦将此等识别标记视为个人信息。同样，就本隐私政策而言，在非个人信息与个人信息合并在一起的情况下，我们将合并后的信息视为个人信息。</span>
 </p>
 <p>
     <span style="font-size: 12px; font-family: SimSun, STSong;">如同大多数网站，我们会自动收集某些信息并存储在日志文件中。这类信息包括 IP 地址、浏览器类型和语言、互联网服务提供商 (ISP)、指示页面和退出页面、操作系统、日期/时间标记和点击流数据。</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">我们使用此等信息以了解和分析趋势、管理网站、了解网站上的用户行为以及收集我们用户群整体的人口统计信息。FTSix Studios 可将此类信息用于我们的营销和广告服务。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">我们使用此等信息以了解和分析趋势、管理网站、了解网站上的用户行为以及收集我们用户群整体的人口统计信息。Jeelab Studios 可将此类信息用于我们的营销和广告服务。</span>
 </p>
 <p>
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">个人信息的保护</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;"> 采取各种预防措施，包括行政、技术和实际的措施，以保障你的个人信息免遭丢失、盗用和误用，以及被擅自取阅、披露、更改或销毁。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;"> 采取各种预防措施，包括行政、技术和实际的措施，以保障你的个人信息免遭丢失、盗用和误用，以及被擅自取阅、披露、更改或销毁。</span>
 </p>
 <p>
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">儿童</span>
@@ -134,16 +134,16 @@ body {
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">全公司对你隐私的承诺</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: 宋体;">为确保你个人信息的安全，我们将公司的隐私和安全准则告知全体 </span><span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;"> 雇员，并将在</span><span style="font-size: 12px; font-family: SimSun, STSong;">工作室</span><span style="font-size: 12px; font-family: 宋体;">内部严格执行隐私保护措施。</span>
+    <span style="font-size: 12px; font-family: 宋体;">为确保你个人信息的安全，我们将公司的隐私和安全准则告知全体 </span><span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;"> 雇员，并将在</span><span style="font-size: 12px; font-family: SimSun, STSong;">工作室</span><span style="font-size: 12px; font-family: 宋体;">内部严格执行隐私保护措施。</span>
 </p>
 <p>
     <span style="font-size: 20px; font-family: 宋体; font-weight: bold;">隐私问题</span>
 </p>
 <p>
-    <span style="font-size: 12px; font-family: 宋体;">如果你对 </span><span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;"> 的隐私政策或数据处理有任何问题或顾虑，请联系我们</span>。
+    <span style="font-size: 12px; font-family: 宋体;">如果你对 </span><span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;"> 的隐私政策或数据处理有任何问题或顾虑，请联系我们</span>。
 </p>
 <p>
-    <span style="font-size: 12px; font-family: SimSun, STSong;">FTSix Studios</span><span style="font-size: 12px; font-family: 宋体;"> 可随时对其隐私政策加以更新。如果我们对隐私政策作出重大变更，我们将在公司网站上刊登通告和经更新的隐私政策。</span>
+    <span style="font-size: 12px; font-family: SimSun, STSong;">Jeelab Studios</span><span style="font-size: 12px; font-family: 宋体;"> 可随时对其隐私政策加以更新。如果我们对隐私政策作出重大变更，我们将在公司网站上刊登通告和经更新的隐私政策。</span>
 </p>
 <p>
     <br/>
